@@ -1,3 +1,11 @@
+2006-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Do not require frequency as it's not required for files.
+	Only pass freq and pids to dvbsrc not to filesrc as well.
+	Make sure FILE uses identity sync=true.
+
 2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
